fix gap not reading

--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,10 @@ a {
   width: 80%;
 }
 
+.gap\-\[2px\] {
+  gap: 1.2rem;
+}
+
 
 .mw\-\[44\] {
   max-width: 100%;
@@ -352,6 +356,11 @@ a {
 
 @media screen and (min-width: 1024px) {
 
+  .m\-\[150px\] {
+    margin: 0px 150px !important;
+  }
+
+  
   .container-custom {
     max-width: 1536px;
     margin: auto;
